// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds profile views fetches multiple profiles 1`] = `
Array [
  Object {
    "associated": Object {
      "feedgens": 0,
      "labeler": false,
      "lists": 0,
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
    "description": "its me!",
    "did": "user(0)",
    "displayName": "ali",
    "followersCount": 2,
    "followsCount": 3,
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [
      Object {
        "cid": "cids(1)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(2)",
        "val": "self-label-a",
      },
      Object {
        "cid": "cids(1)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(2)",
        "val": "self-label-b",
      },
    ],
    "postsCount": 4,
    "viewer": Object {
      "blockedBy": false,
      "followedBy": "record(1)",
      "following": "record(0)",
      "muted": false,
    },
  },
  Object {
    "associated": Object {
      "feedgens": 0,
      "labeler": false,
      "lists": 0,
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)@jpeg",
    "description": "hi im bob label_me",
    "did": "user(2)",
    "displayName": "bobby",
    "followersCount": 2,
    "followsCount": 2,
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "postsCount": 3,
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  Object {
    "associated": Object {
      "feedgens": 0,
      "labeler": false,
      "lists": 0,
    },
    "did": "user(4)",
    "followersCount": 2,
    "followsCount": 1,
    "handle": "carol.test",
    "labels": Array [],
    "postsCount": 2,
    "viewer": Object {
      "blockedBy": false,
      "following": "record(3)",
      "muted": false,
    },
  },
  Object {
    "associated": Object {
      "feedgens": 0,
      "labeler": false,
      "lists": 0,
    },
    "did": "user(5)",
    "followersCount": 1,
    "followsCount": 1,
    "handle": "dan.test",
    "labels": Array [],
    "postsCount": 2,
    "viewer": Object {
      "blockedBy": false,
      "followedBy": "record(4)",
      "muted": false,
    },
  },
]
`;

exports[`pds profile views fetches other's profile, with a follow 1`] = `
Object {
  "associated": Object {
    "feedgens": 0,
    "labeler": false,
    "lists": 0,
  },
  "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
  "description": "its me!",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [
    Object {
      "cid": "cids(1)",
      "cts": "1970-01-01T00:00:00.000Z",
      "src": "user(0)",
      "uri": "record(2)",
      "val": "self-label-a",
    },
    Object {
      "cid": "cids(1)",
      "cts": "1970-01-01T00:00:00.000Z",
      "src": "user(0)",
      "uri": "record(2)",
      "val": "self-label-b",
    },
  ],
  "postsCount": 4,
  "viewer": Object {
    "blockedBy": false,
    "followedBy": "record(1)",
    "following": "record(0)",
    "muted": false,
  },
}
`;

exports[`pds profile views fetches other's profile, without a follow 1`] = `
Object {
  "associated": Object {
    "feedgens": 0,
    "labeler": false,
    "lists": 0,
  },
  "did": "user(0)",
  "followersCount": 1,
  "followsCount": 1,
  "handle": "dan.test",
  "labels": Array [],
  "postsCount": 2,
  "viewer": Object {
    "blockedBy": false,
    "followedBy": "record(0)",
    "muted": false,
  },
}
`;

exports[`pds profile views fetches own profile 1`] = `
Object {
  "associated": Object {
    "feedgens": 0,
    "labeler": false,
    "lists": 0,
  },
  "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
  "description": "its me!",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [
    Object {
      "cid": "cids(1)",
      "cts": "1970-01-01T00:00:00.000Z",
      "src": "user(0)",
      "uri": "record(0)",
      "val": "self-label-a",
    },
    Object {
      "cid": "cids(1)",
      "cts": "1970-01-01T00:00:00.000Z",
      "src": "user(0)",
      "uri": "record(0)",
      "val": "self-label-b",
    },
  ],
  "postsCount": 4,
  "viewer": Object {
    "blockedBy": false,
    "muted": false,
  },
}
`;

exports[`pds profile views presents avatars & banners 1`] = `
Object {
  "associated": Object {
    "feedgens": 0,
    "labeler": false,
    "lists": 0,
  },
  "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
  "banner": "https://bsky.public.url/img/banner/plain/user(1)/cids(1)@jpeg",
  "description": "new descript",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "postsCount": 4,
  "viewer": Object {
    "blockedBy": false,
    "muted": false,
  },
}
`;
